{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 52,
  "lineage": "f333bc9d-6923-04fb-0f0b-1d8a7ef454e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "amazon_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d8e124066f7ed4f7",
            "arn": "arn:aws:ec2:us-east-1:463083499773:instance/i-0c369b186d8cbfc1f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c369b186d8cbfc1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aap-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b6522669c5a2958b"
              }
            ],
            "primary_network_interface_id": "eni-0b6522669c5a2958b",
            "private_dns": "ip-10-0-1-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.225",
            "public_ip": "100.58.240.184",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06997202daf9ede85",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0829c264522d16ed4",
            "tags": {
              "Name": "aap-demo-amazon-linux",
              "OS": "amazon_linux",
              "Role": "compute"
            },
            "tags_all": {
              "Name": "aap-demo-amazon-linux",
              "OS": "amazon_linux",
              "Role": "compute"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06832c04a4e4b34d3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463083499773",
            "id": "i-0c369b186d8cbfc1f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.demo",
            "aws_security_group.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rhel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07006ea0a33e11e4e",
            "arn": "arn:aws:ec2:us-east-1:463083499773:instance/i-0f0b44b29e6677632",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0b44b29e6677632",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "aap-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0541c77a5808ce316"
              }
            ],
            "primary_network_interface_id": "eni-0541c77a5808ce316",
            "private_dns": "ip-10-0-1-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.83",
            "public_ip": "44.203.223.127",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0047743c333afd8df",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0829c264522d16ed4",
            "tags": {
              "Name": "aap-demo-rhel",
              "OS": "rhel",
              "Role": "compute"
            },
            "tags_all": {
              "Name": "aap-demo-rhel",
              "OS": "rhel",
              "Role": "compute"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06832c04a4e4b34d3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463083499773",
            "id": "i-0f0b44b29e6677632",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.demo",
            "aws_security_group.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_ami.rhel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c9408f673ebbd501",
            "arn": "arn:aws:ec2:us-east-1:463083499773:instance/i-0fac4a2c8f86041f7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "aap-demo-windows-ssm-profile",
            "id": "i-0fac4a2c8f86041f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aap-windows-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a550e0b05e0aaef3"
              }
            ],
            "primary_network_interface_id": "eni-0a550e0b05e0aaef3",
            "private_dns": "ip-10-0-1-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.152",
            "public_ip": "3.215.134.85",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0146f20b1ed505db2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0829c264522d16ed4",
            "tags": {
              "Name": "aap-demo-windows",
              "OS": "windows",
              "Role": "compute"
            },
            "tags_all": {
              "Name": "aap-demo-windows",
              "OS": "windows",
              "Role": "compute"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6290c7f480edfd4"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463083499773",
            "id": "i-0fac4a2c8f86041f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.windows_ssm",
            "aws_iam_role.windows_ssm",
            "aws_security_group.windows",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_ssm_parameter.windows_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463083499773:internet-gateway/igw-0b34397a2e1a45e21",
            "id": "igw-0b34397a2e1a45e21",
            "owner_id": "463083499773",
            "region": "us-east-1",
            "tags": {
              "Name": "aap-demo-igw"
            },
            "tags_all": {
              "Name": "aap-demo-igw"
            },
            "vpc_id": "vpc-0009125a2b601bbf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463083499773",
            "id": "igw-0b34397a2e1a45e21",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463083499773:route-table/rtb-080572a098b65c1c6",
            "id": "rtb-080572a098b65c1c6",
            "owner_id": "463083499773",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b34397a2e1a45e21",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aap-demo-route-table"
            },
            "tags_all": {
              "Name": "aap-demo-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0009125a2b601bbf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463083499773",
            "id": "rtb-080572a098b65c1c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c5c3a8f62c71f73",
            "region": "us-east-1",
            "route_table_id": "rtb-080572a098b65c1c6",
            "subnet_id": "subnet-0829c264522d16ed4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463083499773",
            "id": "rtbassoc-00c5c3a8f62c71f73",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463083499773:security-group/sg-06832c04a4e4b34d3",
            "description": "Security group for AAP demo instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06832c04a4e4b34d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aap-demo-sg",
            "name_prefix": "",
            "owner_id": "463083499773",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aap-demo-sg"
            },
            "tags_all": {
              "Name": "aap-demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0009125a2b601bbf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463083499773",
            "id": "sg-06832c04a4e4b34d3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463083499773:security-group/sg-0b6290c7f480edfd4",
            "description": "Allow WinRM HTTPS access to Windows EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6290c7f480edfd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WinRM HTTPS",
                "from_port": 5986,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5986
              }
            ],
            "name": "aap-demo-windows-sg",
            "name_prefix": "",
            "owner_id": "463083499773",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aap-demo-windows-sg"
            },
            "tags_all": {
              "Name": "aap-demo-windows-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0009125a2b601bbf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463083499773",
            "id": "sg-0b6290c7f480edfd4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463083499773:subnet/subnet-0829c264522d16ed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0829c264522d16ed4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463083499773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aap-demo-subnet"
            },
            "tags_all": {
              "Name": "aap-demo-subnet"
            },
            "vpc_id": "vpc-0009125a2b601bbf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463083499773",
            "id": "subnet-0829c264522d16ed4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463083499773:vpc/vpc-0009125a2b601bbf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069fe9519c8e3a9bb",
            "default_route_table_id": "rtb-0b60088ca372dd7a2",
            "default_security_group_id": "sg-09bf1975bff6963fe",
            "dhcp_options_id": "dopt-0d1a213e00f0b5ff0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0009125a2b601bbf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b60088ca372dd7a2",
            "owner_id": "463083499773",
            "region": "us-east-1",
            "tags": {
              "Name": "aap-demo-vpc"
            },
            "tags_all": {
              "Name": "aap-demo-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463083499773",
            "id": "vpc-0009125a2b601bbf9",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}